Refactored the code with new Angular Hooks

--- a/src/app/cockpit/cockpit.component.html
+++ b/src/app/cockpit/cockpit.component.html
@@ -11,7 +11,7 @@
     <button class="btn btn-primary" (click)="onAddServer(serverNameInput)">
       Add Server
     </button>
-    <button class="btn btn-primary" (click)="onAddBlueprint(serverNameInput)">
+    <button class="btn btn-primary" (click)="onAddBlueprint(serverContentInput)">
       Add Server Blueprint
     </button>
   </div>
